# era5_pipeline_tut

./: README.md  main.py  pyproject.toml
datapipeline_demo/nasa/api/: ingestion.py  parsing.py
tests/: test_datapipeline_demo.py
